# sarcasm-persona-exploration

./: .gitignore  QUALITATIVE_HYPOTHESIS_TESTING.md  RESEARCH_GUIDELINES.md  RESEARCH_STATE.md  SARCASM_LAYERS_RESEARCH_PLAN.md  TECHNICAL_GUIDE.md  main.py  open_character_paper_outline.md  pyproject.toml  research_diary.md  scaffolding_notes.md
configs/full_only/: full.yaml
configs/sweep_10_gemma/: layers_30_40.yaml  layers_40_50.yaml  layers_50_60.yaml  layers_60_70.yaml
configs/sweep_10_llama/: layers_0_10.yaml  layers_10_20.yaml  layers_20_30.yaml
configs/sweep_20/: layers_0_20.yaml  layers_20_40.yaml  layers_40_60.yaml  layers_60_80.yaml  layers_80_100.yaml
configs/sweep_amplify/: full_0_5x.yaml  full_1_5x.yaml  full_2x.yaml  full_3x.yaml
configs/sweep_combo_qwen/: layers_0_50.yaml  layers_50_100.yaml  layers_bookends.yaml  layers_middle.yaml
configs/sweep_layer_amplify/: gemma_40_60_2x.yaml  gemma_40_60_3x.yaml  llama_0_20_2x.yaml  llama_0_20_3x.yaml
experiments/exp_001_phase1_replication/: aggregate_judgments.py  analyze_by_prompt.py  config.yaml  judge_samples.py  prepare_samples.py  report.md  reproduce.py  run_judges.sh  visualize_detailed.py  visualize_results.ipynb  visualize_results.py
experiments/exp_002_phase2_boundaries/: EXPERIMENT_PLAN.md  FINDINGS.md  aggregate_judgments.py  aggregated_results.json  visualize_phase2.py
prompts/examples/: chat_mode.yaml  no_template.yaml  simple_chat.yaml  user_sampling_chat.yaml  with_loom.yaml  with_prefill.yaml  (+1 more)
tools/: README.md  __init__.py  loggen.py  run_experiment.py  utils.py
(+26 files in other folders)
