[project]
name = "sarcasm-persona-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffing-toolkit",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
diffing-toolkit = { path = "../../projects/diffing-toolkit", editable = true }
