[project]
name = "sarcasm-persona-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffing-toolkit",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "numpy>=2.2.6",
    "papermill>=2.6.0",
    "pydantic>=2.12.5",
    "weasyprint>=68.0",
]

[tool.uv.sources]
diffing-toolkit = { path = "../../projects/diffing-toolkit", editable = true }
